--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,9 +35,11 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/TallerFinalProg
 endorsed.classpath=
 excludes=
+file.reference.postgresql-42.7.5.jar=C:\\Users\\Carlos Camacho\\Desktop\\ProgramacionII\\Drivers\\postgresql-42.7.5.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.postgresql-42.7.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
