Se modifica codigo y se añade JFrame de docente, se tienen lios en la vinculación del metodo agregar docente

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -75,11 +75,11 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=TallerFinalProg
-main.class=modelo.ControladorDocente
+main.class=controlador.TallerMVC
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_23
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
